[project]
name = "flaresolverr-mcp"
version = "0.1.0"
description = "MCP server for FlareSolverr - bypass Cloudflare protection"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
flaresolverr-mcp = "server:mcp.run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
